<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_update"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.update.UpdatePlan"
    tools:menu="@menu/delete_menu">


    <EditText
        android:id="@+id/updateTitleEditText"
        android:layout_width="341dp"
        android:layout_height="69dp"
        android:ems="10"
        android:hint="@string/title_edit_text"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/updateDescriptionEditText"
        android:layout_width="339dp"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="@string/description_edit_text"
        android:inputType="text"
        android:minHeight="48dp" />

    <Switch
        android:id="@+id/planStatusSwitch"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:text="@string/done_switch"
        android:textSize="16sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Button
        android:id="@+id/updatePlansButton"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/user_plans_button"
        android:text="@string/update_button"
        android:textSize="18sp" />


</LinearLayout>