<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#A0CCEF"
    app:cardCornerRadius="30dp"
    app:cardElevation="3dp"
    app:contentPadding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="401dp"
        android:layout_height="69dp"
        android:padding="16dp"
        tools:ignore="UseSwitchCompatOrMaterialXml">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="-8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_event_note_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/description_text_view"
            android:textColor="#37474F"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-8dp"
            android:text="@string/title_edit_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/planStatusTextView"
            android:layout_width="53dp"
            android:layout_height="20dp"
            android:text="@string/status_text_view"
            android:textColor="#37474F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <Switch-->
<!--            android:id="@+id/planDoneSwitch"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="16dp"-->
<!--            android:minHeight="50dp"-->
<!--            android:text="Plan done"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.78"-->
<!--            app:layout_constraintStart_toEndOf="@+id/descriptionTextView"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:ignore="TouchTargetSizeCheck" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>